[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/general/wood_1.png" type="Texture" id=1]
[ext_resource path="res://doorTrapDoor.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 5.632, 6.9, 0.279 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 2.801, 3.456, 0.156 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 5.601, 0.277, 5.536 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 2.78005, 0.156767, 2.75063 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 9.751, 0.277, 4.344 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 4.86106, 0.153911, 2.16158 )

[node name="doorTrapDoor" type="StaticBody"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
door = true

[node name="door" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="doorShape" type="CollisionShape" parent="."]
shape = SubResource( 7 )

[node name="trapDoor" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="trapDoorShape" type="CollisionShape" parent="."]
shape = SubResource( 8 )
disabled = true

[node name="trapDoorWide" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="trapDoorWideShape" type="CollisionShape" parent="."]
shape = SubResource( 9 )
disabled = true
